# 2026-p1-manya-k

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
